<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    >

    <LinearLayout
        android:id="@+id/lLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:src="@drawable/me"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lLayout4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/authorName"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/authorNim"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/authorClass"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lLayoutRef"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lLayout5"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/refrence"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/refrence1"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textSize="17dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/refrence2"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:textSize="17dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/refrence3"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:textSize="17dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/refrence4"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:textSize="17dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/refrence5"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:textSize="17dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/quotes"
            android:textColor="@color/bgApp"
            android:layout_marginTop="50dp"
            android:textSize="20dp"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lLayoutRef"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        >



        <ImageButton
            android:id="@+id/ibtnIg"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/instagram"
            android:layout_marginRight="40dp"
            />

        <ImageButton
            android:id="@+id/ibtnGit"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/github"
            android:layout_marginRight="40dp"
            />

        <ImageButton
            android:id="@+id/ibtnLink"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/linkedin"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>